--- a/convert.html
+++ b/convert.html
@@ -47,6 +47,7 @@
       <a class="tab active" href="./convert.html">換算</a>
       <a class="tab" href="./password.html">PW</a>
       <a class="tab" href="./voice.html">音声</a>
+      <a class="tab" href="./music.html">音楽</a>
     </nav>
 
     <section class="content">
