--- a/help.html
+++ b/help.html
@@ -49,6 +49,7 @@
       <a class="tab" href="./convert.html">換算</a>
       <a class="tab" href="./password.html">PW</a>
       <a class="tab" href="./voice.html">音声</a>
+      <a class="tab" href="./music.html">音楽</a>
     </nav>
     <section class="content">
       <h1>使い方</h1>
