--- a/music.html
+++ b/music.html
@@ -2,13 +2,13 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="theme-color" content="#171a2b" />
   <title>音楽プレイヤー | 簡易電卓</title>
   <link rel="manifest" href="./manifest.webmanifest" />
   <style>
     :root { --bg:#0f1222; --panel:#171a2b; --panel-2:#1f2340; --text:#e9ecf1; --muted:#a8b0c2; --accent:#6ea8ff; --ok:#4ade80; --danger:#ff6b6b; }
-    html,body{height:100%}
+    html,body{height:100%;}
     *,*::before,*::after{ box-sizing: border-box; }
     body{
       margin:0;
@@ -16,23 +16,31 @@
       color:var(--text);
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Noto Sans JP", sans-serif;
       display:flex; align-items:flex-start; justify-content:center;
-      min-height:100dvh; padding: 16px env(safe-area-inset-right) calc(16px + env(safe-area-inset-bottom)) env(safe-area-inset-left);
+      min-height:100dvh; 
+      padding-top: 16px;
+      padding-bottom: calc(16px + env(safe-area-inset-bottom));
+      padding-left: max(12px, env(safe-area-inset-left));
+      padding-right: max(12px, env(safe-area-inset-right));
     }
-    .app{ width:min(980px, 100%); background:linear-gradient(180deg, var(--panel) 0%, var(--panel-2) 100%); border:1px solid rgba(255,255,255,.06); border-radius:16px; box-shadow:0 10px 30px rgba(0,0,0,.35); overflow:hidden; }
-    .header{ display:flex; align-items:center; justify-content:space-between; padding:14px 16px; border-bottom:1px solid rgba(255,255,255,.06); }
+    .app{ width:min(980px, 100%); background:linear-gradient(180deg, var(--panel) 0%, var(--panel-2) 100%); border:1px solid rgba(255,255,255,.06); border-radius:16px; box-shadow:0 10px 30px rgba(0,0,0,.35); overflow:visible; margin:0 auto; }
+    .header{ display:flex; align-items:center; justify-content:space-between; padding:14px 16px; border-bottom:1px solid rgba(255,255,255,.06); flex-wrap:wrap; }
     .tabs{ display:flex; gap:10px; padding: 8px 14px; border-bottom:1px solid rgba(255,255,255,.06); background: rgba(255,255,255,0.02); overflow-x:auto; overflow-y:hidden; -webkit-overflow-scrolling:touch; }
     .tab{ color: var(--muted); text-decoration: none; padding:6px 10px; border:1px solid rgba(255,255,255,.08); border-radius:8px; background: rgba(255,255,255,.02); font-size:13px; flex:0 0 auto; white-space:nowrap; }
     .tab.active{ color:var(--text); border-color: rgba(255,255,255,.18); background: rgba(255,255,255,.05); }
-    .content{ padding:16px 14px 22px; display:grid; gap:14px; grid-template-columns: 1.2fr 1fr; }
+    .content{ padding:16px 14px 22px; display:grid; gap:14px; grid-template-columns: minmax(0,1.2fr) minmax(0,1fr); width:100%; }
 
-    .panel{ border:1px solid rgba(255,255,255,.08); border-radius:12px; background:rgba(255,255,255,.03); padding:12px; }
-    .row{ display:flex; gap:8px; align-items:center; flex-wrap:wrap; }
+    .panel{ border:1px solid rgba(255,255,255,.08); border-radius:12px; background:rgba(255,255,255,.03); padding:12px; max-width:100%; }
+    .row{ display:flex; gap:8px; align-items:center; flex-wrap:wrap; width:100%; }
+    #left, #right{ min-width:0; }
+    .tabs, .controls{ width:100%; }
+    .drop, #playlist{ width:100%; }
+    .content > *, .controls > *, .row > *{ min-width:0; }
     .btn{ padding:8px 12px; border-radius:10px; border:1px solid rgba(255,255,255,.12); background: rgba(255,255,255,.05); color:var(--text); cursor:pointer; }
     .btn.primary{ background: linear-gradient(180deg, rgba(110,168,255,.5), rgba(110,168,255,.15)); border-color: rgba(110,168,255,.6); }
     input[type="range"]{ accent-color: var(--accent); }
     .muted{ color:var(--muted); font-size:12px; }
 
-    .drop{ border:1px dashed rgba(255,255,255,.25); border-radius:12px; padding:16px; text-align:center; background:rgba(255,255,255,.02); }
+    .drop{ border:1px dashed rgba(255,255,255,.25); border-radius:12px; padding:16px; text-align:center; background:rgba(255,255,255,.02); word-break: break-all; overflow-wrap: break-word; white-space: normal; }
     .drop.drag{ background:rgba(110,168,255,.08); border-color:#6ea8ff; }
 
     .playlist{ max-height: 320px; overflow:auto; display:grid; gap:6px; }
@@ -40,7 +48,8 @@
     .track.active{ outline: 2px solid var(--accent); }
 
     .controls{ display:grid; grid-template-columns: auto 1fr; gap:10px; align-items:center; }
-    .seek{ display:flex; gap:8px; align-items:center; }
+    .seek{ display:flex; gap:8px; align-items:center; min-width:0; }
+    .seek input[type="range"]{ min-width:0; width:100%; }
     .eq{ display:grid; grid-template-columns: repeat(10, 1fr); gap:8px; align-items:end; }
     .eq input{ width:100%; writing-mode: bt-lr; appearance: slider-vertical; -webkit-appearance: slider-vertical; height:140px; }
     .eq label{ text-align:center; font-size:11px; color:var(--muted); }
@@ -49,8 +58,9 @@
     img, canvas, video{ max-width:100%; height:auto; }
     .canvasWrap canvas{ width:100%; height:auto; display:block; }
 
-    @media (max-width: 880px){ .content{ grid-template-columns: 1fr; } }
-    @media (max-width: 520px){ body{ padding: 12px env(safe-area-inset-right) calc(12px + env(safe-area-inset-bottom)) env(safe-area-inset-left); } .controls{ grid-template-columns: 1fr; } }
+    @media (max-width: 880px){ .content{ grid-template-columns: 1fr; } #right > .row{ justify-content:flex-start !important; } #right > .row > *{ flex: 1 1 100%; } #right > .row > .panel{ min-width:0 !important; width:100% !important; } }
+    @media (max-width: 480px){ .eq{ grid-template-columns: repeat(auto-fit, minmax(28px, 1fr)); } }
+    @media (max-width: 768px){ body{ padding-left: max(8px, env(safe-area-inset-left)); padding-right: max(8px, env(safe-area-inset-right)); padding-top: 12px; padding-bottom: calc(12px + env(safe-area-inset-bottom)); } .controls{ grid-template-columns: 1fr; } .tabs{ padding: 8px 10px; } .content{ padding:12px 10px 18px; } label.row{ flex:1 1 100%; } #preset, #xfadeSec, #vol{ width:100% !important; } }
   </style>
 </head>
 <body>
