--- a/help.html
+++ b/help.html
@@ -50,6 +50,7 @@
       <a class="tab" href="./password.html">PW</a>
       <a class="tab" href="./voice.html">音声</a>
       <a class="tab" href="./music.html">音楽</a>
+      <a class="tab" href="./calendar.html">カレンダー</a>
     </nav>
     <section class="content">
       <h1>使い方</h1>
