--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
       <a class="tab" href="./password.html">PW</a>
       <a class="tab" href="./voice.html">音声</a>
       <a class="tab" href="./music.html">音楽</a>
+      <a class="tab" href="./product.html">製品</a>
+      <a class="tab" href="./calendar.html">カレンダー</a>
     </nav>
 
     <section class="display" aria-live="polite">
