--- a/music.html
+++ b/music.html
@@ -79,6 +79,7 @@
       <a class="tab" href="./password.html">PW</a>
       <a class="tab" href="./voice.html">音声</a>
       <a class="tab active" href="./music.html">音楽</a>
+      <a class="tab" href="./calendar.html">カレンダー</a>
     </nav>
 
     <section class="content">
